[tool.poetry]
name = "unsplash"
version = "0.1.0"
description = "An API using Unsplash API"
authors = ["Kappa <kostasrdg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
poetry = "1.7.1"
django = "5.0.1"
ruff = "0.1.15"
requests = "2.31.0"
pillow = "10.2.0"
python-decouple = "3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


## Ruff ##
[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

## MyPy ##
[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = "no-redef"

#[tool.bandit]
#exclude_dirs = ["*/test_*.py", "*/tests/factories*"]